Small tweak to comment form layout to ensure fields don't wrap.
git-svn-id: https://svn.apache.org/repos/asf/roller/trunk@1078513 13f79535-47bb-0310-9956-ffa450edef68

--- a/weblogger-webapp/src/main/webapp/themes/basic/basic-custom.css
+++ b/weblogger-webapp/src/main/webapp/themes/basic/basic-custom.css
@@ -216,6 +216,9 @@ label.choice{
     width: 80%;
 }
 
+div.comments-form form ul {
+   width:40em;
+}
 
 /*-------------------------------------------------------------
 Basic theme styles
