--- a/weblogger-webapp/src/main/webapp/themes/sotto/sotto-custom.css
+++ b/weblogger-webapp/src/main/webapp/themes/sotto/sotto-custom.css
@@ -223,6 +223,9 @@ label.choice{
     color: #444;
     width: 80%;
 }
+div.comments-form form ul {
+   width:40em;
+}
 
 /**
   * STANDARD ELEMENTS
